feat: add packageManager field
