# apps/api/redis-client.ts
@@ -5,6 +5,7 @@ import { Package } from './package.js'
 import consola from 'consola'
 
 const schema = new Schema('package', {
+  packageManager: { type: 'string' },
   source: { type: 'string' },
   identifier: { type: 'string' },
   name: { type: 'text' },
@@ -53,6 +54,7 @@ export class RedisClient implements DatabaseClient {
     }
 
     return {
+      packageManager: entity.packageManager,
       source: entity.source,
       identifier: entity.identifier,
       name: entity.name,
@@ -104,6 +106,7 @@ export class RedisClient implements DatabaseClient {
 
     return {
       packages: entities.map((entity: any) => ({
+        packageManager: entity.packageManager,
         source: entity.source,
         identifier: entity.identifier,
         name: entity.name,
